--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -12,4 +12,4 @@ spring:
         jdbc:
           lob:
             non_contextual_creation: true
-        ddl-auto: update
+        ddl-auto: create
