--- a/fornecedor/fornecedor.yml
+++ b/fornecedor/fornecedor.yml
@@ -4,12 +4,8 @@ spring:
     username: postgres
     url: jdbc:postgresql://localhost:5432/fornecedor
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQL9Dialect
-    properties:
-      hibernate:
-        temp:
-          use_jdbc_metadata_defaults: false
-        jdbc:
-          lob:
-            non_contextual_creation: false
-        ddl-auto: update
+    hibernate:
+      ddl-auto: update
+      dialect: org.hibernate.dialect.PostgreSQL9Dialect
+      show_sql: true
+    properties.hibernate.temp.use_jdbc_metadata_defaults: false
